# aq_test

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  ruff.toml  setup.py
aqp/: __init__.py  cli.py
aqp/lib/: config.py  error.py  functions.py  lexer.py  parser.py  reader.py  tokens.py
aqp/src/: action.py  file_source.py  lexer.py  parser.py  reader.py  tokens.py
test/: test.aqp
tests/: test_execute.py  test_lexer.py  test_parser.py
