[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aqp"
version = "0.1.0"
dependencies = []
requires-python = ">=3.8"

[tool.setuptools.packages]
find = {}

[project.scripts]
aqp = "aqp.cli:main"

[tool.setuptools.package-data]
aqp = ["py.typed"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff.lint]
select = ["F", "W"]
ignore = []
extend-select = ["I"]
